thorntail update